src/style.css
@import url("fonts/noto-serif.css");

h1 {
  font-size: 1.4em;
}

h2 {
  font-size: 1.1em;
}

a:link {
  color: #6d6137;
}

body {
  width: 60vw;
  min-width: 20em;
  max-width: 40em;
  margin: auto;

  font-family: "Noto Serif", serif;
  font-size: 1em;

  text-align: justify;
  word-wrap: break-word;
  hyphens: auto;
}

figure img {
  display: block;
  margin: auto;
  width: 30vh;
  min-width: 10em;
  max-width: 20em;
  border: 1px solid #696057;
}

figcaption {
  margin: 0.4em 2em;
  text-align: center;
  color: #5f5f5f;
}

blockquote {
  font-style: italic;
  color: #5f5f5f;
}

code, pre {
  font-family: monospace;
  color: #353535;
}
pre {
  padding: 0.5em 1em;
  color: #34302d;
  background-color: #f5e7de;
}

.red {
  color: #b23636;
}

.box {
  width: 40vw;
  margin: auto;
  padding: 0.5em;
  border: 1px dotted #765636;
}

.row {
  display: flex;
}

.row img {
  max-width: 15vw;
}

